src/lima/gp_ir/parser.output
Terminals which are not used

   SAMPLER2D
   SAMPLERCUBE
   INVARIANT
   PRECISION


State 12 conflicts: 1 shift/reduce


Grammar

    0 $accept: complete_program $end

    1 const_index: '[' CONST_INDEX ']'

    2 storage_qualifier: UNIFORM
    3                  | ATTRIBUTE
    4                  | VARYING

    5 precision: PRECISION_LOW
    6          | PRECISION_MEDIUM
    7          | PRECISION_HIGH
    8          | PRECISION_SUPER

    9 scalar_type: BOOL
   10            | INT
   11            | FLOAT

   12 vec2_type: BVEC2
   13          | IVEC2
   14          | VEC2

   15 vec3_type: BVEC3
   16          | IVEC3
   17          | VEC3

   18 vec4_type: BVEC4
   19          | IVEC4
   20          | VEC4

   21 type: scalar_type
   22     | vec2_type
   23     | vec3_type
   24     | vec4_type
   25     | MAT2
   26     | MAT3
   27     | MAT4

   28 reg_size: FLOAT
   29         | VEC2
   30         | VEC3
   31         | VEC4

   32 reg_type: /* empty */
   33         | '<' reg_size '>'

   34 scalar_const: CONST_INDEX
   35             | CONST_FLOAT
   36             | CONST_BOOL

   37 vec2_const: vec2_type '(' scalar_const ',' scalar_const ')'

   38 vec3_const: vec3_type '(' scalar_const ',' scalar_const ',' scalar_const ')'
   39           | vec3_type '(' vec2_const ',' scalar_const ')'
   40           | vec3_type '(' scalar_const ',' vec2_const ')'

   41 vec4_const: vec4_type '(' scalar_const ',' scalar_const ',' scalar_const ',' scalar_const ')'
   42           | vec4_type '(' vec2_const ',' vec2_const ')'
   43           | vec4_type '(' vec2_const ',' scalar_const ',' scalar_const ')'
   44           | vec4_type '(' scalar_const ',' vec2_const ',' scalar_const ')'
   45           | vec4_type '(' scalar_const ',' scalar_const ',' vec2_const ')'
   46           | vec4_type '(' vec3_const ',' scalar_const ')'
   47           | vec4_type '(' scalar_const ',' vec3_const ')'

   48 declaration: storage_qualifier precision type IDENTIFIER ';'
   49            | storage_qualifier type IDENTIFIER ';'
   50            | storage_qualifier precision type IDENTIFIER const_index ';'
   51            | storage_qualifier type IDENTIFIER const_index ';'
   52            | CONST precision scalar_type IDENTIFIER '=' scalar_const ';'
   53            | CONST precision vec2_type IDENTIFIER '=' vec2_const ';'
   54            | CONST precision vec3_type IDENTIFIER '=' vec3_const ';'
   55            | CONST precision vec4_type IDENTIFIER '=' vec4_const ';'

   56 temp_alloc: '(' TEMP_ALLOC CONST_INDEX ')'

   57 opt_negate: /* empty */
   58           | '-'

   59 alu_node: '(' opt_negate ALU_OP_1 opt_negate node ')'
   60         | '(' opt_negate ALU_OP_2 opt_negate node opt_negate node ')'
   61         | '(' opt_negate ALU_OP_3 opt_negate node opt_negate node opt_negate node ')'

   62 clamp_const: '(' CLAMP_CONST CONST_INDEX node ')'
   63            | '(' CLAMP_CONST INLINE CONST_FLOAT CONST_FLOAT node ')'

   64 const: '(' INLINE_CONST CONST_FLOAT ')'

   65 expr: '(' EXPR IDENTIFIER ')'

   66 virt_reg: '(' VIRT_REG IDENTIFIER '.' COMPONENT ')'

   67 load: '(' LOAD_UNIFORM CONST_INDEX '.' COMPONENT ')'
   68     | '(' LOAD_UNIFORM CONST_INDEX '.' COMPONENT OFF_REG ':' CONST_INDEX ')'
   69     | '(' LOAD_TEMP CONST_INDEX '.' COMPONENT ')'
   70     | '(' LOAD_TEMP CONST_INDEX '.' COMPONENT OFF_REG ':' CONST_INDEX ')'
   71     | '(' LOAD_ATTRIBUTE CONST_INDEX '.' COMPONENT ')'

   72 node: alu_node
   73     | clamp_const
   74     | const
   75     | expr
   76     | virt_reg
   77     | load

   78 expr_def: '(' DEF_EXPR IDENTIFIER node ')'

   79 virt_reg_def: '(' STORE_VIRT_REG reg_type IDENTIFIER COMPONENT ':' node ')'
   80             | '(' STORE_VIRT_REG reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node ')'
   81             | '(' STORE_VIRT_REG reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   82             | '(' STORE_VIRT_REG reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

   83 varying_store: '(' STORE_VARYING CONST_INDEX COMPONENT ':' node ')'
   84              | '(' STORE_VARYING CONST_INDEX COMPONENT ':' node COMPONENT ':' node ')'
   85              | '(' STORE_VARYING CONST_INDEX COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   86              | '(' STORE_VARYING CONST_INDEX COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

   87 temp_store: '(' STORE_TEMP node COMPONENT ':' node ')'
   88           | '(' STORE_TEMP node COMPONENT ':' node COMPONENT ':' node ')'
   89           | '(' STORE_TEMP node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   90           | '(' STORE_TEMP node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

   91 off_reg_store: '(' STORE_OFF0 node ')'
   92              | '(' STORE_OFF1 node ')'
   93              | '(' STORE_OFF2 node ')'

   94 branch: '(' BRANCH IDENTIFIER ')'
   95       | '(' BRANCH IDENTIFIER node ')'

   96 root_node: expr_def
   97          | virt_reg_def
   98          | varying_store
   99          | temp_store
  100          | off_reg_store
  101          | branch

  102 phi_node_src: '(' IDENTIFIER IDENTIFIER ')'

  103 phi_node_srcs: /* empty */
  104              | phi_node_srcs phi_node_src

  105 phi_node: '(' PHI reg_type IDENTIFIER phi_node_srcs ')'

  106 block: IDENTIFIER ':'
  107      | block phi_node
  108      | block root_node

  109 program: /* empty */
  110        | program block
  111        | program declaration
  112        | program temp_alloc

  113 complete_program: program


Terminals, with rules where they appear

$end (0) 0
'(' (40) 37 38 39 40 41 42 43 44 45 46 47 56 59 60 61 62 63 64 65 66
    67 68 69 70 71 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    94 95 102 105
')' (41) 37 38 39 40 41 42 43 44 45 46 47 56 59 60 61 62 63 64 65 66
    67 68 69 70 71 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    94 95 102 105
',' (44) 37 38 39 40 41 42 43 44 45 46 47
'-' (45) 58
'.' (46) 66 67 68 69 70 71
':' (58) 68 70 79 80 81 82 83 84 85 86 87 88 89 90 106
';' (59) 48 49 50 51 52 53 54 55
'<' (60) 33
'=' (61) 52 53 54 55
'>' (62) 33
'[' (91) 1
']' (93) 1
error (256)
TEMP_ALLOC (258) 56
ATTRIBUTE (259) 3
UNIFORM (260) 2
VARYING (261) 4
CONST (262) 52 53 54 55
PRECISION_SUPER (263) 8
PRECISION_HIGH (264) 7
PRECISION_MEDIUM (265) 6
PRECISION_LOW (266) 5
BOOL (267) 9
FLOAT (268) 11 28
INT (269) 10
BVEC2 (270) 12
BVEC3 (271) 15
BVEC4 (272) 18
IVEC2 (273) 13
IVEC3 (274) 16
IVEC4 (275) 19
VEC2 (276) 14 29
VEC3 (277) 17 30
VEC4 (278) 20 31
MAT2 (279) 25
MAT3 (280) 26
MAT4 (281) 27
SAMPLER2D (282)
SAMPLERCUBE (283)
INVARIANT (284)
PRECISION (285)
IDENTIFIER (286) 48 49 50 51 52 53 54 55 65 66 78 79 80 81 82 94 95
    102 105 106
CONST_INDEX (287) 1 34 56 62 67 68 69 70 71 83 84 85 86
CONST_FLOAT (288) 35 63 64
CONST_BOOL (289) 36
ALU_OP_1 (290) 59
ALU_OP_2 (291) 60
ALU_OP_3 (292) 61
CLAMP_CONST (293) 62 63
INLINE (294) 63
INLINE_CONST (295) 64
EXPR (296) 65
DEF_EXPR (297) 78
VIRT_REG (298) 66
STORE_VIRT_REG (299) 79 80 81 82
STORE_VARYING (300) 83 84 85 86
STORE_TEMP (301) 87 88 89 90
STORE_OFF0 (302) 91
STORE_OFF1 (303) 92
STORE_OFF2 (304) 93
LOAD_UNIFORM (305) 67 68
LOAD_TEMP (306) 69 70
LOAD_ATTRIBUTE (307) 71
OFF_REG (308) 68 70
BRANCH (309) 94 95
PHI (310) 105
COMPONENT (311) 66 67 68 69 70 71 79 80 81 82 83 84 85 86 87 88 89
    90


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
const_index (70)
    on left: 1, on right: 50 51
storage_qualifier (71)
    on left: 2 3 4, on right: 48 49 50 51
precision (72)
    on left: 5 6 7 8, on right: 48 50 52 53 54 55
scalar_type (73)
    on left: 9 10 11, on right: 21 52
vec2_type (74)
    on left: 12 13 14, on right: 22 37 53
vec3_type (75)
    on left: 15 16 17, on right: 23 38 39 40 54
vec4_type (76)
    on left: 18 19 20, on right: 24 41 42 43 44 45 46 47 55
type (77)
    on left: 21 22 23 24 25 26 27, on right: 48 49 50 51
reg_size (78)
    on left: 28 29 30 31, on right: 33
reg_type (79)
    on left: 32 33, on right: 79 80 81 82 105
scalar_const (80)
    on left: 34 35 36, on right: 37 38 39 40 41 43 44 45 46 47 52
vec2_const (81)
    on left: 37, on right: 39 40 42 43 44 45 53
vec3_const (82)
    on left: 38 39 40, on right: 46 47 54
vec4_const (83)
    on left: 41 42 43 44 45 46 47, on right: 55
declaration (84)
    on left: 48 49 50 51 52 53 54 55, on right: 111
temp_alloc (85)
    on left: 56, on right: 112
opt_negate (86)
    on left: 57 58, on right: 59 60 61
alu_node (87)
    on left: 59 60 61, on right: 72
clamp_const (88)
    on left: 62 63, on right: 73
const (89)
    on left: 64, on right: 74
expr (90)
    on left: 65, on right: 75
virt_reg (91)
    on left: 66, on right: 76
load (92)
    on left: 67 68 69 70 71, on right: 77
node (93)
    on left: 72 73 74 75 76 77, on right: 59 60 61 62 63 78 79 80 81
    82 83 84 85 86 87 88 89 90 91 92 93 95
expr_def (94)
    on left: 78, on right: 96
virt_reg_def (95)
    on left: 79 80 81 82, on right: 97
varying_store (96)
    on left: 83 84 85 86, on right: 98
temp_store (97)
    on left: 87 88 89 90, on right: 99
off_reg_store (98)
    on left: 91 92 93, on right: 100
branch (99)
    on left: 94 95, on right: 101
root_node (100)
    on left: 96 97 98 99 100 101, on right: 108
phi_node_src (101)
    on left: 102, on right: 104
phi_node_srcs (102)
    on left: 103 104, on right: 104 105
phi_node (103)
    on left: 105, on right: 107
block (104)
    on left: 106 107 108, on right: 107 108 110
program (105)
    on left: 109 110 111 112, on right: 110 111 112 113
complete_program (106)
    on left: 113, on right: 0


state 0

    0 $accept: . complete_program $end

    $default  reduce using rule 109 (program)

    program           go to state 1
    complete_program  go to state 2


state 1

  110 program: program . block
  111        | program . declaration
  112        | program . temp_alloc
  113 complete_program: program .

    ATTRIBUTE   shift, and go to state 3
    UNIFORM     shift, and go to state 4
    VARYING     shift, and go to state 5
    CONST       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '('         shift, and go to state 8

    $default  reduce using rule 113 (complete_program)

    storage_qualifier  go to state 9
    declaration        go to state 10
    temp_alloc         go to state 11
    block              go to state 12


state 2

    0 $accept: complete_program . $end

    $end  shift, and go to state 13


state 3

    3 storage_qualifier: ATTRIBUTE .

    $default  reduce using rule 3 (storage_qualifier)


state 4

    2 storage_qualifier: UNIFORM .

    $default  reduce using rule 2 (storage_qualifier)


state 5

    4 storage_qualifier: VARYING .

    $default  reduce using rule 4 (storage_qualifier)


state 6

   52 declaration: CONST . precision scalar_type IDENTIFIER '=' scalar_const ';'
   53            | CONST . precision vec2_type IDENTIFIER '=' vec2_const ';'
   54            | CONST . precision vec3_type IDENTIFIER '=' vec3_const ';'
   55            | CONST . precision vec4_type IDENTIFIER '=' vec4_const ';'

    PRECISION_SUPER   shift, and go to state 14
    PRECISION_HIGH    shift, and go to state 15
    PRECISION_MEDIUM  shift, and go to state 16
    PRECISION_LOW     shift, and go to state 17

    precision  go to state 18


state 7

  106 block: IDENTIFIER . ':'

    ':'  shift, and go to state 19


state 8

   56 temp_alloc: '(' . TEMP_ALLOC CONST_INDEX ')'

    TEMP_ALLOC  shift, and go to state 20


state 9

   48 declaration: storage_qualifier . precision type IDENTIFIER ';'
   49            | storage_qualifier . type IDENTIFIER ';'
   50            | storage_qualifier . precision type IDENTIFIER const_index ';'
   51            | storage_qualifier . type IDENTIFIER const_index ';'

    PRECISION_SUPER   shift, and go to state 14
    PRECISION_HIGH    shift, and go to state 15
    PRECISION_MEDIUM  shift, and go to state 16
    PRECISION_LOW     shift, and go to state 17
    BOOL              shift, and go to state 21
    FLOAT             shift, and go to state 22
    INT               shift, and go to state 23
    BVEC2             shift, and go to state 24
    BVEC3             shift, and go to state 25
    BVEC4             shift, and go to state 26
    IVEC2             shift, and go to state 27
    IVEC3             shift, and go to state 28
    IVEC4             shift, and go to state 29
    VEC2              shift, and go to state 30
    VEC3              shift, and go to state 31
    VEC4              shift, and go to state 32
    MAT2              shift, and go to state 33
    MAT3              shift, and go to state 34
    MAT4              shift, and go to state 35

    precision    go to state 36
    scalar_type  go to state 37
    vec2_type    go to state 38
    vec3_type    go to state 39
    vec4_type    go to state 40
    type         go to state 41


state 10

  111 program: program declaration .

    $default  reduce using rule 111 (program)


state 11

  112 program: program temp_alloc .

    $default  reduce using rule 112 (program)


state 12

  107 block: block . phi_node
  108      | block . root_node
  110 program: program block .

    '('  shift, and go to state 42

    '('       [reduce using rule 110 (program)]
    $default  reduce using rule 110 (program)

    expr_def       go to state 43
    virt_reg_def   go to state 44
    varying_store  go to state 45
    temp_store     go to state 46
    off_reg_store  go to state 47
    branch         go to state 48
    root_node      go to state 49
    phi_node       go to state 50


state 13

    0 $accept: complete_program $end .

    $default  accept


state 14

    8 precision: PRECISION_SUPER .

    $default  reduce using rule 8 (precision)


state 15

    7 precision: PRECISION_HIGH .

    $default  reduce using rule 7 (precision)


state 16

    6 precision: PRECISION_MEDIUM .

    $default  reduce using rule 6 (precision)


state 17

    5 precision: PRECISION_LOW .

    $default  reduce using rule 5 (precision)


state 18

   52 declaration: CONST precision . scalar_type IDENTIFIER '=' scalar_const ';'
   53            | CONST precision . vec2_type IDENTIFIER '=' vec2_const ';'
   54            | CONST precision . vec3_type IDENTIFIER '=' vec3_const ';'
   55            | CONST precision . vec4_type IDENTIFIER '=' vec4_const ';'

    BOOL   shift, and go to state 21
    FLOAT  shift, and go to state 22
    INT    shift, and go to state 23
    BVEC2  shift, and go to state 24
    BVEC3  shift, and go to state 25
    BVEC4  shift, and go to state 26
    IVEC2  shift, and go to state 27
    IVEC3  shift, and go to state 28
    IVEC4  shift, and go to state 29
    VEC2   shift, and go to state 30
    VEC3   shift, and go to state 31
    VEC4   shift, and go to state 32

    scalar_type  go to state 51
    vec2_type    go to state 52
    vec3_type    go to state 53
    vec4_type    go to state 54


state 19

  106 block: IDENTIFIER ':' .

    $default  reduce using rule 106 (block)


state 20

   56 temp_alloc: '(' TEMP_ALLOC . CONST_INDEX ')'

    CONST_INDEX  shift, and go to state 55


state 21

    9 scalar_type: BOOL .

    $default  reduce using rule 9 (scalar_type)


state 22

   11 scalar_type: FLOAT .

    $default  reduce using rule 11 (scalar_type)


state 23

   10 scalar_type: INT .

    $default  reduce using rule 10 (scalar_type)


state 24

   12 vec2_type: BVEC2 .

    $default  reduce using rule 12 (vec2_type)


state 25

   15 vec3_type: BVEC3 .

    $default  reduce using rule 15 (vec3_type)


state 26

   18 vec4_type: BVEC4 .

    $default  reduce using rule 18 (vec4_type)


state 27

   13 vec2_type: IVEC2 .

    $default  reduce using rule 13 (vec2_type)


state 28

   16 vec3_type: IVEC3 .

    $default  reduce using rule 16 (vec3_type)


state 29

   19 vec4_type: IVEC4 .

    $default  reduce using rule 19 (vec4_type)


state 30

   14 vec2_type: VEC2 .

    $default  reduce using rule 14 (vec2_type)


state 31

   17 vec3_type: VEC3 .

    $default  reduce using rule 17 (vec3_type)


state 32

   20 vec4_type: VEC4 .

    $default  reduce using rule 20 (vec4_type)


state 33

   25 type: MAT2 .

    $default  reduce using rule 25 (type)


state 34

   26 type: MAT3 .

    $default  reduce using rule 26 (type)


state 35

   27 type: MAT4 .

    $default  reduce using rule 27 (type)


state 36

   48 declaration: storage_qualifier precision . type IDENTIFIER ';'
   50            | storage_qualifier precision . type IDENTIFIER const_index ';'

    BOOL   shift, and go to state 21
    FLOAT  shift, and go to state 22
    INT    shift, and go to state 23
    BVEC2  shift, and go to state 24
    BVEC3  shift, and go to state 25
    BVEC4  shift, and go to state 26
    IVEC2  shift, and go to state 27
    IVEC3  shift, and go to state 28
    IVEC4  shift, and go to state 29
    VEC2   shift, and go to state 30
    VEC3   shift, and go to state 31
    VEC4   shift, and go to state 32
    MAT2   shift, and go to state 33
    MAT3   shift, and go to state 34
    MAT4   shift, and go to state 35

    scalar_type  go to state 37
    vec2_type    go to state 38
    vec3_type    go to state 39
    vec4_type    go to state 40
    type         go to state 56


state 37

   21 type: scalar_type .

    $default  reduce using rule 21 (type)


state 38

   22 type: vec2_type .

    $default  reduce using rule 22 (type)


state 39

   23 type: vec3_type .

    $default  reduce using rule 23 (type)


state 40

   24 type: vec4_type .

    $default  reduce using rule 24 (type)


state 41

   49 declaration: storage_qualifier type . IDENTIFIER ';'
   51            | storage_qualifier type . IDENTIFIER const_index ';'

    IDENTIFIER  shift, and go to state 57


state 42

   78 expr_def: '(' . DEF_EXPR IDENTIFIER node ')'
   79 virt_reg_def: '(' . STORE_VIRT_REG reg_type IDENTIFIER COMPONENT ':' node ')'
   80             | '(' . STORE_VIRT_REG reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node ')'
   81             | '(' . STORE_VIRT_REG reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   82             | '(' . STORE_VIRT_REG reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   83 varying_store: '(' . STORE_VARYING CONST_INDEX COMPONENT ':' node ')'
   84              | '(' . STORE_VARYING CONST_INDEX COMPONENT ':' node COMPONENT ':' node ')'
   85              | '(' . STORE_VARYING CONST_INDEX COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   86              | '(' . STORE_VARYING CONST_INDEX COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   87 temp_store: '(' . STORE_TEMP node COMPONENT ':' node ')'
   88           | '(' . STORE_TEMP node COMPONENT ':' node COMPONENT ':' node ')'
   89           | '(' . STORE_TEMP node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   90           | '(' . STORE_TEMP node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   91 off_reg_store: '(' . STORE_OFF0 node ')'
   92              | '(' . STORE_OFF1 node ')'
   93              | '(' . STORE_OFF2 node ')'
   94 branch: '(' . BRANCH IDENTIFIER ')'
   95       | '(' . BRANCH IDENTIFIER node ')'
  105 phi_node: '(' . PHI reg_type IDENTIFIER phi_node_srcs ')'

    DEF_EXPR        shift, and go to state 58
    STORE_VIRT_REG  shift, and go to state 59
    STORE_VARYING   shift, and go to state 60
    STORE_TEMP      shift, and go to state 61
    STORE_OFF0      shift, and go to state 62
    STORE_OFF1      shift, and go to state 63
    STORE_OFF2      shift, and go to state 64
    BRANCH          shift, and go to state 65
    PHI             shift, and go to state 66


state 43

   96 root_node: expr_def .

    $default  reduce using rule 96 (root_node)


state 44

   97 root_node: virt_reg_def .

    $default  reduce using rule 97 (root_node)


state 45

   98 root_node: varying_store .

    $default  reduce using rule 98 (root_node)


state 46

   99 root_node: temp_store .

    $default  reduce using rule 99 (root_node)


state 47

  100 root_node: off_reg_store .

    $default  reduce using rule 100 (root_node)


state 48

  101 root_node: branch .

    $default  reduce using rule 101 (root_node)


state 49

  108 block: block root_node .

    $default  reduce using rule 108 (block)


state 50

  107 block: block phi_node .

    $default  reduce using rule 107 (block)


state 51

   52 declaration: CONST precision scalar_type . IDENTIFIER '=' scalar_const ';'

    IDENTIFIER  shift, and go to state 67


state 52

   53 declaration: CONST precision vec2_type . IDENTIFIER '=' vec2_const ';'

    IDENTIFIER  shift, and go to state 68


state 53

   54 declaration: CONST precision vec3_type . IDENTIFIER '=' vec3_const ';'

    IDENTIFIER  shift, and go to state 69


state 54

   55 declaration: CONST precision vec4_type . IDENTIFIER '=' vec4_const ';'

    IDENTIFIER  shift, and go to state 70


state 55

   56 temp_alloc: '(' TEMP_ALLOC CONST_INDEX . ')'

    ')'  shift, and go to state 71


state 56

   48 declaration: storage_qualifier precision type . IDENTIFIER ';'
   50            | storage_qualifier precision type . IDENTIFIER const_index ';'

    IDENTIFIER  shift, and go to state 72


state 57

   49 declaration: storage_qualifier type IDENTIFIER . ';'
   51            | storage_qualifier type IDENTIFIER . const_index ';'

    '['  shift, and go to state 73
    ';'  shift, and go to state 74

    const_index  go to state 75


state 58

   78 expr_def: '(' DEF_EXPR . IDENTIFIER node ')'

    IDENTIFIER  shift, and go to state 76


state 59

   79 virt_reg_def: '(' STORE_VIRT_REG . reg_type IDENTIFIER COMPONENT ':' node ')'
   80             | '(' STORE_VIRT_REG . reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node ')'
   81             | '(' STORE_VIRT_REG . reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   82             | '(' STORE_VIRT_REG . reg_type IDENTIFIER COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

    '<'  shift, and go to state 77

    $default  reduce using rule 32 (reg_type)

    reg_type  go to state 78


state 60

   83 varying_store: '(' STORE_VARYING . CONST_INDEX COMPONENT ':' node ')'
   84              | '(' STORE_VARYING . CONST_INDEX COMPONENT ':' node COMPONENT ':' node ')'
   85              | '(' STORE_VARYING . CONST_INDEX COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   86              | '(' STORE_VARYING . CONST_INDEX COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

    CONST_INDEX  shift, and go to state 79


state 61

   87 temp_store: '(' STORE_TEMP . node COMPONENT ':' node ')'
   88           | '(' STORE_TEMP . node COMPONENT ':' node COMPONENT ':' node ')'
   89           | '(' STORE_TEMP . node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   90           | '(' STORE_TEMP . node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

    '('  shift, and go to state 80

    alu_node     go to state 81
    clamp_const  go to state 82
    const        go to state 83
    expr         go to state 84
    virt_reg     go to state 85
    load         go to state 86
    node         go to state 87


state 62

   91 off_reg_store: '(' STORE_OFF0 . node ')'

    '('  shift, and go to state 80

    alu_node     go to state 81
    clamp_const  go to state 82
    const        go to state 83
    expr         go to state 84
    virt_reg     go to state 85
    load         go to state 86
    node         go to state 88


state 63

   92 off_reg_store: '(' STORE_OFF1 . node ')'

    '('  shift, and go to state 80

    alu_node     go to state 81
    clamp_const  go to state 82
    const        go to state 83
    expr         go to state 84
    virt_reg     go to state 85
    load         go to state 86
    node         go to state 89


state 64

   93 off_reg_store: '(' STORE_OFF2 . node ')'

    '('  shift, and go to state 80

    alu_node     go to state 81
    clamp_const  go to state 82
    const        go to state 83
    expr         go to state 84
    virt_reg     go to state 85
    load         go to state 86
    node         go to state 90


state 65

   94 branch: '(' BRANCH . IDENTIFIER ')'
   95       | '(' BRANCH . IDENTIFIER node ')'

    IDENTIFIER  shift, and go to state 91


state 66

  105 phi_node: '(' PHI . reg_type IDENTIFIER phi_node_srcs ')'

    '<'  shift, and go to state 77

    $default  reduce using rule 32 (reg_type)

    reg_type  go to state 92


state 67

   52 declaration: CONST precision scalar_type IDENTIFIER . '=' scalar_const ';'

    '='  shift, and go to state 93


state 68

   53 declaration: CONST precision vec2_type IDENTIFIER . '=' vec2_const ';'

    '='  shift, and go to state 94


state 69

   54 declaration: CONST precision vec3_type IDENTIFIER . '=' vec3_const ';'

    '='  shift, and go to state 95


state 70

   55 declaration: CONST precision vec4_type IDENTIFIER . '=' vec4_const ';'

    '='  shift, and go to state 96


state 71

   56 temp_alloc: '(' TEMP_ALLOC CONST_INDEX ')' .

    $default  reduce using rule 56 (temp_alloc)


state 72

   48 declaration: storage_qualifier precision type IDENTIFIER . ';'
   50            | storage_qualifier precision type IDENTIFIER . const_index ';'

    '['  shift, and go to state 73
    ';'  shift, and go to state 97

    const_index  go to state 98


state 73

    1 const_index: '[' . CONST_INDEX ']'

    CONST_INDEX  shift, and go to state 99


state 74

   49 declaration: storage_qualifier type IDENTIFIER ';' .

    $default  reduce using rule 49 (declaration)


state 75

   51 declaration: storage_qualifier type IDENTIFIER const_index . ';'

    ';'  shift, and go to state 100


state 76

   78 expr_def: '(' DEF_EXPR IDENTIFIER . node ')'

    '('  shift, and go to state 80

    alu_node     go to state 81
    clamp_const  go to state 82
    const        go to state 83
    expr         go to state 84
    virt_reg     go to state 85
    load         go to state 86
    node         go to state 101


state 77

   33 reg_type: '<' . reg_size '>'

    FLOAT  shift, and go to state 102
    VEC2   shift, and go to state 103
    VEC3   shift, and go to state 104
    VEC4   shift, and go to state 105

    reg_size  go to state 106


state 78

   79 virt_reg_def: '(' STORE_VIRT_REG reg_type . IDENTIFIER COMPONENT ':' node ')'
   80             | '(' STORE_VIRT_REG reg_type . IDENTIFIER COMPONENT ':' node COMPONENT ':' node ')'
   81             | '(' STORE_VIRT_REG reg_type . IDENTIFIER COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   82             | '(' STORE_VIRT_REG reg_type . IDENTIFIER COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

    IDENTIFIER  shift, and go to state 107


state 79

   83 varying_store: '(' STORE_VARYING CONST_INDEX . COMPONENT ':' node ')'
   84              | '(' STORE_VARYING CONST_INDEX . COMPONENT ':' node COMPONENT ':' node ')'
   85              | '(' STORE_VARYING CONST_INDEX . COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   86              | '(' STORE_VARYING CONST_INDEX . COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

    COMPONENT  shift, and go to state 108


state 80

   59 alu_node: '(' . opt_negate ALU_OP_1 opt_negate node ')'
   60         | '(' . opt_negate ALU_OP_2 opt_negate node opt_negate node ')'
   61         | '(' . opt_negate ALU_OP_3 opt_negate node opt_negate node opt_negate node ')'
   62 clamp_const: '(' . CLAMP_CONST CONST_INDEX node ')'
   63            | '(' . CLAMP_CONST INLINE CONST_FLOAT CONST_FLOAT node ')'
   64 const: '(' . INLINE_CONST CONST_FLOAT ')'
   65 expr: '(' . EXPR IDENTIFIER ')'
   66 virt_reg: '(' . VIRT_REG IDENTIFIER '.' COMPONENT ')'
   67 load: '(' . LOAD_UNIFORM CONST_INDEX '.' COMPONENT ')'
   68     | '(' . LOAD_UNIFORM CONST_INDEX '.' COMPONENT OFF_REG ':' CONST_INDEX ')'
   69     | '(' . LOAD_TEMP CONST_INDEX '.' COMPONENT ')'
   70     | '(' . LOAD_TEMP CONST_INDEX '.' COMPONENT OFF_REG ':' CONST_INDEX ')'
   71     | '(' . LOAD_ATTRIBUTE CONST_INDEX '.' COMPONENT ')'

    CLAMP_CONST     shift, and go to state 109
    INLINE_CONST    shift, and go to state 110
    EXPR            shift, and go to state 111
    VIRT_REG        shift, and go to state 112
    LOAD_UNIFORM    shift, and go to state 113
    LOAD_TEMP       shift, and go to state 114
    LOAD_ATTRIBUTE  shift, and go to state 115
    '-'             shift, and go to state 116

    $default  reduce using rule 57 (opt_negate)

    opt_negate  go to state 117


state 81

   72 node: alu_node .

    $default  reduce using rule 72 (node)


state 82

   73 node: clamp_const .

    $default  reduce using rule 73 (node)


state 83

   74 node: const .

    $default  reduce using rule 74 (node)


state 84

   75 node: expr .

    $default  reduce using rule 75 (node)


state 85

   76 node: virt_reg .

    $default  reduce using rule 76 (node)


state 86

   77 node: load .

    $default  reduce using rule 77 (node)


state 87

   87 temp_store: '(' STORE_TEMP node . COMPONENT ':' node ')'
   88           | '(' STORE_TEMP node . COMPONENT ':' node COMPONENT ':' node ')'
   89           | '(' STORE_TEMP node . COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'
   90           | '(' STORE_TEMP node . COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node COMPONENT ':' node ')'

    COMPONENT  shift, and go to state 118


state 88

   91 off_reg_store: '(' STORE_OFF0 node . ')'

    ')'  shift, and go to state 119


state 89

   92 off_reg_store: '(' STORE_OFF1 node . ')'

    ')'  shift, and go to state 120


state 90

   93 off_reg_store: '(' STORE_OFF2 node . ')'

    ')'  shift, and go to state 121


state 91

   94 branch: '(' BRANCH IDENTIFIER . ')'
   95       | '(' BRANCH IDENTIFIER . node ')'

    '('  shift, and go to state 80
    ')'  shift, and go to state 122

    alu_node     go to state 81
    clamp_const  go to state 82
    const        go to state 83
    expr         go to state 84
    virt_reg     go to state 85
    load         go to state 86
    node         go to state 123


state 92

  105 phi_node: '(' PHI reg_type . IDENTIFIER phi_node_srcs ')'

    IDENTIFIER  shift, and go to state 124


state 93

   52 declaration: CONST precision scalar_type IDENTIFIER '=' . scalar_const ';'

    CONST_INDEX  shift, and go to state 125
    CONST_FLOAT  shift, and go to state 126
    CONST_BOOL   shift, and go to state 127

    scalar_const  go to state 128


state 94
